hphp/test/slow/hack_mode/closing-tag-asp.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/hack_mode/closing-tag-asp.php on line 3